Aligned the projects correctly.

--- a/main.css
+++ b/main.css
@@ -10844,4 +10844,10 @@ a.text-dark:hover, a.text-dark:focus {
       -ms-flex-positive: 1 !important;
           flex-grow: 1 !important;
 }
+
+.flex-grow-0 {
+  -webkit-box-flex: 0 !important;
+      -ms-flex-positive: 0 !important;
+          flex-grow: 0 !important;
+}
 /*# sourceMappingURL=main.css.map */
